Client app change

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -124,7 +124,7 @@
 
     <servlet>
         <servlet-name>clientapp</servlet-name>
-        <jsp-file>/index.html</jsp-file>
+        <jsp-file>/jsps/index.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>clientapp</servlet-name>
@@ -132,7 +132,7 @@
     </servlet-mapping>
     
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>/jsps/index.jsp</welcome-file>
     </welcome-file-list>
  
  	<!--  JDBC -->
