Using StringSubstitutor instead of StrSubstitutor as the former is deprecated

--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,12 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.54</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.4</version>
+		</dependency>
     </dependencies>
 	<build>
 		<extensions>
