Updated static bucket name

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -23,6 +23,7 @@ servername=localhost:8080/ROOT
 static.url=https://static.facilio.in
 
 s3.bucket.name=facilio-data
+static.bucket=facilio-client-build
 
 redis.enabled=false
 redis.host=facilio-cache.jihtbf.0001.usw2.cache.amazonaws.com
