--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -130,6 +130,14 @@
         <servlet-name>clientapp</servlet-name>
         <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>clientapp</servlet-name>
+        <url-pattern>/tv/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>clientapp</servlet-name>
+        <url-pattern>/service/*</url-pattern>
+    </servlet-mapping>
     
     <welcome-file-list>
         <welcome-file>/jsps/index.jsp</welcome-file>
