--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -34,7 +34,7 @@ weather.url=https://api.darksky.net/forecast/
 weather.key=21acf692b2952cac20b8ecdc56bea27c
 
 enable.kinesis=false
-cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://vivek.com:9090,https://facilstack.com:9090
+cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
 enable.transaction=true
 chargebee.site=payfacilio-test
