Added files.url path

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -24,6 +24,7 @@ static.url=https://static.facilio.in
 
 s3.bucket.name=facilio-data
 static.bucket=facilio-client-build
+files.url=files.facilio.com
 
 redis.enabled=false
 redis.host=facilio-cache.jihtbf.0001.usw2.cache.amazonaws.com
