Fixed client side redirection

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -3,9 +3,9 @@ secretKeyId=aSF06wXNoSOCVv7RW4u+AZ2b0e6NMZPAl3pfg528
 region=us-west-2
 clientEndpoint=avzdxo3ow2ja2.iot.us-west-2.amazonaws.com
 
-app.url=http://localhost:8080/ROOT
+app.url=https://localhost:8080/ROOT
 
-clientapp.url=http://localhost:9090
+clientapp.url=https://localhost:9090
 portal.domain=facilioportal.com
 api.servername=localhost:8080
 login.url=/
