Timing out Controller watcher job

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -13,7 +13,7 @@ logs.bucket=facilio-logs
 websocket.url=ws://localhost:8080/bms/websocket
 payment.url=https://payfacilio-test.chargebee.com/hosted_pages/plans/
 environment=development
-schedulerServer=true
+schedulerServer=false
 instantJobServer=true
 kinesisServer=false
 scheduleexecutorsfile=executors
