error stream will be pushed to kafka instead of kinesis

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -50,3 +50,5 @@ anomalyBucketDir=stage/anomaly
 anomalyPeriodicity=30
 anomalyRefreshWaitTimeInSeconds=10
 anomalyDetectWaitTimeInSeconds=3
+
+kafka.producer=172.31.10.161:9092
