--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,12 @@
 			<version>2.5.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -257,13 +263,6 @@
 			<version>5.1.42</version>
 		</dependency>
 
-		<!-- Temp -->
-		<dependency>
-			<groupId>org.eclipse.paho</groupId>
-			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<!-- Temp -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -274,11 +273,7 @@
 			<artifactId>nimbus-jose-jwt</artifactId>
 			<version>4.23</version>
 		</dependency>
-		<!-- 		<dependency>
-                    <groupId>com.facilio</groupId>
-                    <artifactId>fedge</artifactId>
-                    <version>0.0.1-SNAPSHOT</version>
-                </dependency> -->
+
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
