changed redis instance

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -27,7 +27,7 @@ static.bucket=facilio-client-build
 files.url=files.facilio.com
 
 redis.enabled=false
-redis.host=facilio-cache.jihtbf.0001.usw2.cache.amazonaws.com
+redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
 redis.db=2
 
