added access id and secret key

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -1,5 +1,5 @@
-accessKeyId=AKIAIMJ3HZG4FEIPUKJA
-secretKeyId=aSF06wXNoSOCVv7RW4u+AZ2b0e6NMZPAl3pfg528
+iot.accessKeyId=AKIAIVXNCI3T7TCHFGPA
+iot.secretKeyId=jK6uCU3HUhI06r6Udl0P2u6aMaNAvxfwhn+HR1Eg
 region=us-west-2
 iot.endpoint=avzdxo3ow2ja2-ats.iot.us-west-2.amazonaws.com
 
