--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -2,47 +2,47 @@ iot.accessKeyId=AKIAIVXNCI3T7TCHFGPA
 iot.secretKeyId=jK6uCU3HUhI06r6Udl0P2u6aMaNAvxfwhn+HR1Eg
 region=us-west-2
 iot.endpoint=avzdxo3ow2ja2-ats.iot.us-west-2.amazonaws.com
-
-app.url=https://localhost:8080/ROOT
-
-clientapp.url=https://localhost:9090
-portal.domain=facilioportal.com
-api.servername=localhost:8080
-login.url=/
 logs.bucket=facilio-logs
-websocket.url=ws://localhost:8080/bms/websocket
-payment.url=https://payfacilio-test.chargebee.com/hosted_pages/plans/
+s3.bucket.name=facilio-data
+static.bucket=facilio-client-build
+key.pair.id=APKAJUH5UCWNSYC4DOSQ
+
+
 environment=development
+
+api.servername=localhost:8080
 schedulerServer=false
 instantJobServer=true
 kinesisServer=false
 scheduleexecutorsfile=executors
 schedulejobfile=schedulerJobs
-enableeventjob=true
 servername=localhost:8080/ROOT
-static.url=https://static.facilio.in
+enable.transaction=true
+enable.kinesis=false
+redis.enabled=false
 
-s3.bucket.name=facilio-data
-static.bucket=facilio-client-build
+portal.domain=facilioportal.com
+app.url=https://localhost:8080/ROOT
+clientapp.url=https://localhost:9090
+websocket.url=ws://localhost:8080/bms/websocket
+static.url=https://static.facilio.in
 files.url=files.facilio.com
 
-redis.enabled=false
 redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
 redis.db=2
 
+payment.url=https://payfacilio-test.chargebee.com/hosted_pages/plans/
+
 weather.url=https://api.darksky.net/forecast/
 weather.key=21acf692b2952cac20b8ecdc56bea27c
 
-enable.kinesis=false
-cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com
-#data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
-enable.transaction=true
 chargebee.site=payfacilio-test
 chargebee.api=test_AcdMBlnceZzwYhGeAX6dkxzocvglIkJjL
-admin.console=yoge@facilio.com,bhuvaneswaran.g@facilio.com,manthosh@facilio.com,shivaraj@facilio.com,magesh@facilio.com,dhivya@facilio.com,tharani+1@facilio.com,vivek@facilio.com,shaan@facilio.com
 
-enable.sessionverify=demo,jake@facilio.com
+cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com
+#data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
+
 anomalyTempDir=/tmp
 anomalyCheckServiceURL=http://localhost:7444/api
 anomalyBucket=facilio-analytics
