--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -27,6 +27,8 @@ clientapp.url=https://localhost:9090
 websocket.url=ws://localhost:8080/bms/websocket
 static.url=https://static.facilio.in
 files.url=files.facilio.com
+# change below to local_filestore for development setup
+files.store.type=aws_filestore
 
 redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
