added property to send email via smtp

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -29,6 +29,7 @@ static.url=https://static.facilio.in
 files.url=files.facilio.com
 # change below to local_filestore for development setup
 files.store.type=aws_filestore
+email.type=aws
 
 redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
