kafka based notification enabled for stage

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -55,5 +55,6 @@ anomalyRefreshWaitTimeInSeconds=10
 anomalyDetectWaitTimeInSeconds=3
 
 kafka.producer=172.31.26.64:9092
+kafka.consumers=172.31.26.64:9092
 
 disable.csp=false
