--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -56,5 +56,6 @@ anomalyDetectWaitTimeInSeconds=3
 
 kafka.producer=172.31.26.64:9092
 kafka.consumers=172.31.26.64:9092
+kafka.brokers=172.31.26.64:9092
 
 disable.csp=false
