--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -149,7 +149,7 @@
         <url-pattern>/sandbox/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>/jsps/index.jsp</welcome-file>
     </welcome-file-list>
  
  	<!--  JDBC -->
