cors issue fix for local access admin console access externalized kinesis notification processor disabled if csp is enabled

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -57,5 +57,5 @@ anomalyDetectWaitTimeInSeconds=3
 kafka.producer=172.31.26.64:9092
 kafka.consumers=172.31.26.64:9092
 kafka.brokers=172.31.26.64:9092
-
+admin.domain=facilio.com
 disable.csp=false
