adding localhost:9090 in cors origin due to recent change in cors filter

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -43,7 +43,7 @@ weather.key=21acf692b2952cac20b8ecdc56bea27c
 chargebee.site=payfacilio-test
 chargebee.api=test_AcdMBlnceZzwYhGeAX6dkxzocvglIkJjL
 
-cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com
+cors.allowed.origins=http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com,localhost:9090
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
 
 anomalyTempDir=/tmp
