rebrandInfo file change

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -8,6 +8,13 @@ static.bucket=facilio-client-build
 key.pair.id=APKAJUH5UCWNSYC4DOSQ
 
 
+rebrand.supportemail=support@facilio.com
+rebrand.brand=Facilio
+rebrand.domain=facilio.com
+rebrand.alertemail=alerts@facilio.com
+rebrand.copyright.name=Facilio Inc
+rebrand.copyright.year=2018
+
 environment=development
 
 api.servername=localhost:8080
