--- a/deployment-files/awsprops-user.properties
+++ b/deployment-files/awsprops-user.properties
@@ -1,11 +1,11 @@
-iot.accessKeyId=
-iot.secretKeyId=
-region=
-iot.endpoint=
-logs.bucket=
-s3.bucket.name=
-static.bucket=
-key.pair.id=
+iot.accessKeyId=AKIAIVXNCI3T7TCHFGPA
+iot.secretKeyId=jK6uCU3HUhI06r6Udl0P2u6aMaNAvxfwhn+HR1Eg
+region=us-west-2
+iot.endpoint=avzdxo3ow2ja2-ats.iot.us-west-2.amazonaws.com
+logs.bucket=facilio-logs
+s3.bucket.name=facilio-data
+static.bucket=facilio-client-build
+key.pair.id=APKAJUH5UCWNSYC4DOSQ
 
 
 rebrand.supportemail=support@facilio.com
@@ -32,25 +32,25 @@ portal.domain=facilioportal.com
 app.url=https://localhost:8080/ROOT
 clientapp.url=https://localhost:9090
 websocket.url=ws://localhost:8080/bms/websocket
-static.url=
-files.url=
+static.url=https://static.facilio.in
+files.url=files.facilio.com
 # change below to local_filestore for development setup
-files.store.type=facilio_filestore
-email.type=smtp
+files.store.type=aws_filestore
+email.type=aws
 
-redis.host=
-redis.port=
-redis.db=
+redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
+redis.port=6379
+redis.db=2
 
-payment.url=
+payment.url=https://payfacilio-test.chargebee.com/hosted_pages/plans/
 
-weather.url=
-weather.key=
+weather.url=https://api.darksky.net/forecast/
+weather.key=21acf692b2952cac20b8ecdc56bea27c
 
-chargebee.site=
-chargebee.api=
+chargebee.site=payfacilio-test
+chargebee.api=test_AcdMBlnceZzwYhGeAX6dkxzocvglIkJjL
 
-cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090
+cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com,localhost:9090
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
 
 anomalyTempDir=/tmp
@@ -61,8 +61,8 @@ anomalyPeriodicity=30
 anomalyRefreshWaitTimeInSeconds=10
 anomalyDetectWaitTimeInSeconds=3
 
-kafka.producer=
-kafka.consumers=
-kafka.brokers=
+kafka.producer=172.31.26.64:9092
+kafka.consumers=172.31.26.64:9092
+kafka.brokers=172.31.26.64:9092
 admin.domain=facilio.com
 disable.csp=false
