--- a/appspec.yml
+++ b/appspec.yml
@@ -17,21 +17,21 @@ files:
     destination: /home/ubuntu
   - source: /setenv.sh
     destination: /home/ubuntu
-  - source: /deployment-files/awsprops-scheduler.properties
+  - source: /awsprops-scheduler.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/awsprops-stage.properties
+  - source: /awsprops-stage.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/awsprops-user.properties
+  - source: /awsprops-user.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/log4j-user.properties
+  - source: /log4j-user.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/log4j-stage.properties
+  - source: /log4j-stage.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/log4j-scheduler.properties
+  - source: /log4j-scheduler.properties
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/context-production.xml
+  - source: /context-production.xml
     destination: /home/ubuntu/deployment-files/
-  - source: /deployment-files/context-stage.xml
+  - source: /context-stage.xml
     destination: /home/ubuntu/deployment-files/
 
 permissions:
