build package changes

--- a/deployment-files/awsprops-scheduler.properties
+++ b/deployment-files/awsprops-scheduler.properties
@@ -3,7 +3,7 @@ iot.secretKeyId=jK6uCU3HUhI06r6Udl0P2u6aMaNAvxfwhn+HR1Eg
 region=us-west-2
 iot.endpoint=avzdxo3ow2ja2-ats.iot.us-west-2.amazonaws.com
 logs.bucket=facilio-logs
-s3.bucket.name=facilio-data
+s3.bucket.name=facilio-ae-data
 static.bucket=facilio-client-build
 key.pair.id=APKAJUH5UCWNSYC4DOSQ
 
@@ -13,26 +13,26 @@ rebrand.brand=Facilio
 rebrand.domain=facilio.com
 rebrand.alertemail=alerts@facilio.com
 rebrand.copyright.name=Facilio Inc
-rebrand.copyright.year=2018
+rebrand.copyright.year=2019
 
-environment=development
+environment=production
 
-api.servername=localhost:8080
-schedulerServer=false
+api.servername=app.facilio.com
+schedulerServer=true
 instantJobServer=true
-kinesisServer=false
+kinesisServer=true
 scheduleexecutorsfile=executors
 schedulejobfile=schedulerJobs
-servername=localhost:8080/ROOT
+servername=user-production-1756879720.us-west-2.elb.amazonaws.com
 enable.transaction=true
-enable.kinesis=false
-redis.enabled=false
+enable.kinesis=true
+redis.enabled=true
 
 portal.domain=facilioportal.com
-app.url=https://localhost:8080/ROOT
-clientapp.url=https://localhost:9090
-websocket.url=ws://localhost:8080/bms/websocket
-static.url=https://static.facilio.in
+app.url=https://app.facilio.com/ROOT
+clientapp.url=https://app.facilio.com
+websocket.url=wss://app.facilio.com/websocket
+static.url=https://static.facilio.com
 files.url=files.facilio.com
 # change below to local_filestore for development setup
 files.store.type=aws_filestore
@@ -50,13 +50,13 @@ weather.key=21acf692b2952cac20b8ecdc56bea27c
 chargebee.site=payfacilio-test
 chargebee.api=test_AcdMBlnceZzwYhGeAX6dkxzocvglIkJjL
 
-cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090,https://facilioportal.com,https://facilstack.com,localhost:9090
+cors.allowed.origins=https://facilio.ae,https://fazilio.com,https://facilio.com,localhost:8080,localhost:9090,https://facilio.in,https://facilstack.com,https://facilioportal.com
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
 
-anomalyTempDir=/tmp
-anomalyCheckServiceURL=http://localhost:7444/api
+anomalyTempDir=/home/ubuntu/analytics/temp
+anomalyCheckServiceURL=http://172.31.38.25:7445/api
 anomalyBucket=facilio-analytics
-anomalyBucketDir=stage/anomaly
+anomalyBucketDir=prod/anomaly
 anomalyPeriodicity=30
 anomalyRefreshWaitTimeInSeconds=10
 anomalyDetectWaitTimeInSeconds=3
