--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -50,7 +50,7 @@ weather.key=
 chargebee.site=
 chargebee.api=
 
-cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,http://localfacilioportal.com:9090
+cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,localhost:9090,http://localfacilioportal.com:9090
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
 
 anomalyTempDir=/tmp
