--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -34,8 +34,7 @@ clientapp.url=https://localhost:9090
 websocket.url=ws://localhost:8080/bms/websocket
 static.url=
 files.url=
-# change below to local_filestore for development setup
-files.store.type=facilio_filestore
+files.store.type=local_filestore
 email.type=smtp
 
 redis.host=
