Websocket url fix for stage setup

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -31,7 +31,7 @@ redis.enabled=true
 portal.domain=facilstack.com
 app.url=https://app.facilio.in/ROOT
 clientapp.url=https://app.facilio.in
-websocket.url=ws://app.facilio.in/websocket
+websocket.url=wss://app.facilio.in/websocket
 static.url=https://static.facilio.in
 files.url=files.facilio.in
 # change below to local_filestore for development setup
