awsprops added in all environment

--- a/deployment-files/awsprops-scheduler.properties
+++ b/deployment-files/awsprops-scheduler.properties
@@ -7,6 +7,8 @@ s3.bucket.name=facilio-ae-data
 static.bucket=facilio-client-build
 key.pair.id=APKAJUH5UCWNSYC4DOSQ
 
+db.name=mysql
+db.class=com.facilio.sql.mysql
 
 rebrand.supportemail=support@facilio.com
 rebrand.brand=Facilio
