Adding static url for dev awsprops too

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -34,7 +34,7 @@ portal.domain=facilioportal.com
 app.url=https://localhost:8080/ROOT
 clientapp.url=https://localhost:9090
 websocket.url=ws://localhost:8080/bms/websocket
-static.url=
+static.url=https://static.facilio.com
 files.url=
 files.store.type=local_filestore
 email.type=smtp
