started syncing with mysql query with mssql

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -7,8 +7,8 @@ s3.bucket.name=
 static.bucket=
 key.pair.id=
 
-db.name=mysql
-db.class=com.facilio.sql.mysql
+db.name=mssql
+db.class=com.facilio.sql.mssql
 
 rebrand.supportemail=support@facilio.com
 rebrand.brand=Facilio
