MSSQL changes with fields

--- a/src/main/resources/conf/db/mssql.properties
+++ b/src/main/resources/conf/db/mssql.properties
@@ -11,6 +11,8 @@ module.submodule.all.name=with recursivecte as\n (select m.moduleid, m.extends_i
 module.submodule.all.id=with recursivecte as\n (select m.moduleid, m.extends_id from modules m\n where orgid = ? and moduleid = ?\n union all \n select m1.moduleid, m1.extends_id from modules m1 \n inner join recursivecte rcte on m1.moduleid = rcte.extends_id\n )\n select child_module_id from submodulesrel inner join recursivecte on submodulesrel.parent_module_id = recursivecte.moduleid
 module.submodule.type.id=with recursivecte as\n (select m.moduleid, m.extends_id from modules m\n where orgid = ? and moduleid = ?\n union all \n select m1.moduleid, m1.extends_id from modules m1 \n inner join recursivecte rcte on m1.moduleid = rcte.extends_id\n )\n select child_module_id from submodulesrel inner join modules childmodules on submodulesrel.child_module_id = childmodules.moduleid inner join recursivecte on submodulesrel.parent_module_id = recursivecte.moduleid where childmodules.module_type in ({0})
 
+module.extended.id=with recursivecte as\n (select m.moduleid, m.extends_id from modules m\n where orgid = ? and moduleid = ?\n union all \n select m1.moduleid, m1.extends_id from modules m1 \n inner join recursivecte rcte on m1.moduleid = rcte.extends_id\n ) select moduleid from recursivecte
+
 # report date aggr query
 year.expr=format(dateadd(s, {$place_holder1$}, (DATEADD(s, {$place_holder$}/1000, '1970-01-01 00:00:00'))),'yyyy')
 monthandyear.expr=format(dateadd(s, {$place_holder1$}, (DATEADD(s, {$place_holder$}/1000, '1970-01-01 00:00:00'))),'yyyy MM')
