removed redundant properties in awsprops.properties

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -6,6 +6,7 @@ logs.bucket=facilio-logs
 s3.bucket.name=facilio-stage1-data
 static.bucket=facilio-client-build
 key.pair.id=APKAJUH5UCWNSYC4DOSQ
+user.id=668907905219
 
 db.name=mysql
 db.class=com.facilio.sql.mysql
@@ -19,27 +20,18 @@ rebrand.copyright.year=2018
 
 environment=stage
 
-api.servername=app.facilio.in
 schedulerServer=true
 instantJobServer=true
-kinesisServer=true
-scheduleexecutorsfile=executors
-schedulejobfile=schedulerJobs
-servername=stage-330328973.us-west-2.elb.amazonaws.com/ROOT
-enable.transaction=true
 enable.kinesis=true
-redis.enabled=true
 
+app.domain=app.facilio.in
 portal.domain=facilstack.com
-app.url=https://app.facilio.in/ROOT
-clientapp.url=https://app.facilio.in
-websocket.url=wss://app.facilio.in/websocket
 static.url=https://static.facilio.in
-files.url=files.facilio.in
 # change below to local_filestore for development setup
+files.url=files.facilio.in
 files.store.type=aws_filestore
-email.type=aws
 
+redis.enabled=true
 redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
 redis.db=1
@@ -64,7 +56,14 @@ anomalyRefreshWaitTimeInSeconds=1
 anomalyDetectWaitTimeInSeconds=0
 
 kafka.producer=172.31.26.64:9092
-kafka.consumers=172.31.26.64:9092
-kafka.brokers=172.31.26.64:9092
+kafka.consumer=172.31.26.64:9092
+
 admin.domain=facilio.com
-disable.csp=true
+onpremise=true
+
+email.type=aws
+mail.smtp.host=
+mail.smtp.socketFactory.port=
+mail.smtp.port=
+mail.username=
+mail.password=
