--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -1,12 +1,3 @@
-iot.accessKeyId=
-iot.secretKeyId=
-region=
-iot.endpoint=
-logs.bucket=
-s3.bucket.name=
-static.bucket=
-key.pair.id=
-
 db.name=mysql
 db.class=com.facilio.sql.mysql
 
@@ -22,34 +13,17 @@ environment=development
 api.servername=localhost:8080
 schedulerServer=false
 instantJobServer=true
-kinesisServer=false
-scheduleexecutorsfile=executors
-schedulejobfile=schedulerJobs
 servername=localhost:8080/ROOT
-enable.transaction=true
 enable.kinesis=false
 redis.enabled=false
 
 portal.domain=facilioportal.com
-app.url=https://localhost:8080/ROOT
 clientapp.url=https://localhost:9090
 websocket.url=ws://localhost:8080/bms/websocket
 static.url=https://static.facilio.com
 files.url=
 files.store.type=local_filestore
 email.type=smtp
-
-redis.host=
-redis.port=
-redis.db=
-
-payment.url=
-
-weather.url=
-weather.key=
-
-chargebee.site=
-chargebee.api=
 
 cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,localhost:9090,http://localfacilioportal.com:9090
 #data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
@@ -67,3 +41,9 @@ kafka.consumers=
 kafka.brokers=
 admin.domain=facilio.com
 disable.csp=false
+
+mail.smtp.host=pro.turbo-smtp.com
+mail.smtp.socketFactory.port=465
+mail.smtp.port=465
+mail.username=bhuvaneswaran.g@facilio.com
+mail.password=irxWMis1
