changed property names and added description for property

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -22,7 +22,7 @@ environment=stage
 
 schedulerServer=true
 instantJobServer=true
-enable.kinesis=true
+messageProcessor=true
 
 app.domain=app.facilio.in
 portal.domain=facilstack.com
