--- a/deployment-files/awsprops-user.properties
+++ b/deployment-files/awsprops-user.properties
@@ -22,7 +22,7 @@ environment=production
 
 schedulerServer=false
 instantJobServer=true
-enable.kinesis=false
+messageProcessor=false
 
 app.domain=app.facilio.com
 portal.domain=facilioportal.com
