--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -1,32 +1,54 @@
+## db name [mysql / mssql]
 db.name=mysql
+
+## implementation for db  [com.facilio.sql.mysql for mysql and com.facilio.sql.mssql for mssql]
 db.class=com.facilio.sql.mysql
 
+## support email used in mail sender
 rebrand.supportemail=support@facilio.com
-rebrand.brand=Facilio
-rebrand.domain=facilio.com
+## alert email used to send alerts from the products
 rebrand.alertemail=alerts@facilio.com
+
+## name used in client side and email
+rebrand.brand=Facilio
+
+## domain name used in client side
+rebrand.domain=facilio.com
 rebrand.copyright.name=Facilio Inc
 rebrand.copyright.year=2018
 
+## environment of this server [development/stage/production]
 environment=development
 
-api.servername=localhost:8080
+## should this server run schedule jobs
 schedulerServer=false
+## should this server run instant jobs
 instantJobServer=true
-servername=localhost:8080/ROOT
-enable.kinesis=false
-redis.enabled=false
+## should this server process iot messages
+messageProcessor=false
 
+## app domain used in the links send in mobile and emails.
+app.domain=localhost:9090
+## service portal domain of this application
 portal.domain=facilioportal.com
-clientapp.url=https://localhost:9090
-websocket.url=ws://localhost:8080/bms/websocket
+## url where static contents (js/css/images/fonts) are hosted
 static.url=https://static.facilio.com
+## file server url
 files.url=
+## file store type  [aws_filestore/facilio_filestore/local_filestore]
 files.store.type=local_filestore
-email.type=smtp
 
 cors.allowed.origins=localhost:8080,http://localhost:8080,http://localhost:9090,localhost:9090,http://localfacilioportal.com:9090
-#data science url . For staging and production , this URL should be http://54.221.38.121:7444/v1/anomalydetection
+
+## is redis enabled for this setup
+redis.enabled=false
+## host name of the redis instance if enabled
+redis.host=
+## port number of the redis instance
+redis.port=
+## db name in redis to use
+redis.db=
+
 
 anomalyTempDir=/tmp
 anomalyCheckServiceURL=http://localhost:7444/api
@@ -36,14 +58,25 @@ anomalyPeriodicity=30
 anomalyRefreshWaitTimeInSeconds=10
 anomalyDetectWaitTimeInSeconds=3
 
+## kafka broker list that producer should use
 kafka.producer=
-kafka.consumers=
-kafka.brokers=
-admin.domain=facilio.com
-disable.csp=false
+## kafka broker list that consumer should use for iot messages
+kafka.consumer=
 
-mail.smtp.host=pro.turbo-smtp.com
-mail.smtp.socketFactory.port=465
-mail.smtp.port=465
-mail.username=bhuvaneswaran.g@facilio.com
-mail.password=irxWMis1
+## admin domain used to access admin console
+admin.domain=facilio.com
+## is this server deployed on premise
+onpremise=false
+
+## email type to use [smtp/aws]
+email.type=smtp
+## smtp host name
+mail.smtp.host=
+## smtp port
+mail.smtp.port=
+## smtp socket factory port
+mail.smtp.socketFactory.port=
+## smtp user name
+mail.username=
+## smtp password
+mail.password=
