--- a/deployment-files/awsprops-scheduler.properties
+++ b/deployment-files/awsprops-scheduler.properties
@@ -22,7 +22,7 @@ environment=production
 
 schedulerServer=true
 instantJobServer=true
-enable.kinesis=true
+messageProcessor=true
 
 app.domain=app.facilio.com
 portal.domain=facilioportal.com
