--- a/appspec.yml
+++ b/appspec.yml
@@ -34,11 +34,10 @@ files:
 
 permissions:
   - object: /home/ubuntu
+    pattern: "deployment-files"
     owner: ubuntu
     group: ubuntu
     mode: 644
-    type:
-      - directory
 
   - object: /home/ubuntu/tomcat/webapps
     pattern: "ROOT.war"
@@ -46,20 +45,11 @@ permissions:
     group: ubuntu
     mode: 644
 
-  - object: /home/ubuntu/deployment-files/
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
-    mode: 644
-    type:
-      - file
-
   - object: /home/ubuntu
     pattern: "*.sh"
     owner: ubuntu
     group: ubuntu
     mode: 755
-
 
 hooks:
   ApplicationStop:
