changed urls of predict ML API

--- a/deployment-files/awsprops-scheduler.properties
+++ b/deployment-files/awsprops-scheduler.properties
@@ -49,6 +49,7 @@ cors.allowed.origins=https://facilio.ae,https://fazilio.com,https://facilio.com,
 
 anomalyTempDir=/home/ubuntu/analytics/temp
 anomalyCheckServiceURL=http://172.31.38.25:7445/api
+anomalyPredictServiceURL=http://172.31.34.102:7445/api
 anomalyBucket=facilio-analytics
 anomalyBucketDir=prod/anomaly
 anomalyPeriodicity=30
