--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -49,6 +49,7 @@ cors.allowed.origins=http://localhost:8080,http://localhost:9090,localhost:8080,
 
 anomalyTempDir=/home/ubuntu/analytics/temp
 anomalyCheckServiceURL=http://172.31.34.102:7444/api
+anomalyPredictServiceURL=http://172.31.34.102:7444/api
 anomalyBucket=facilio-analytics
 anomalyBucketDir=stage/anomaly
 anomalyPeriodicity=30
