--- a/src/main/resources/conf/db/mysql.properties
+++ b/src/main/resources/conf/db/mysql.properties
@@ -26,3 +26,5 @@ hoursofdayonly.expr=DATE_FORMAT(CONVERT_TZ(from_unixtime(floor({$place_holder$}/
 quaterly.expr=YEAR(CONVERT_TZ(from_unixtime(floor({$place_holder$}/1000)),@@session.time_zone,'{$place_holder1$}')), QUARTER(CONVERT_TZ(from_unixtime(floor({$place_holder$}/1000)),@@session.time_zone,'{$place_holder1$}'))
 
 
+query.cache.orgId=75
+query.cache.tables=Users,ORG_Users,Organizations
