added tables to cache and changed log statements to debug

--- a/src/main/resources/conf/db/mysql.properties
+++ b/src/main/resources/conf/db/mysql.properties
@@ -27,4 +27,4 @@ quaterly.expr=YEAR(CONVERT_TZ(from_unixtime(floor({$place_holder$}/1000)),@@sess
 
 
 query.cache.orgId=75
-query.cache.tables=Users,ORG_Users,Organizations
+query.cache.tables=Users,ORG_Users,Organizations,Groups,Role,TicketCategory,TicketPriority,TicketType,Alarm_Severity,Asset_Categories,Asset_Types,Asset_Departments,Inventory_vendors,Inventory_category,Energy_Meter_Purpose,BaseSpace,Energy_Meter,Calendar_Color,Shift,TicketStatus,Forms,Building,Site
