added new kinesis deployment

--- a/deployment-files/awsprops-kinesis.properties
+++ b/deployment-files/awsprops-kinesis.properties
@@ -20,9 +20,9 @@ rebrand.copyright.year=2019
 
 environment=production
 
-schedulerServer=true
-instantJobServer=true
-messageProcessor=false
+schedulerServer=false
+instantJobServer=false
+messageProcessor=true
 
 app.domain=app.facilio.com
 portal.domain=facilioportal.com
