getting asset views from module

--- a/src/main/resources/conf/db/mssql.properties
+++ b/src/main/resources/conf/db/mssql.properties
@@ -13,6 +13,8 @@ module.submodule.type.id=with recursivecte as\n (select m.moduleid, m.extends_id
 
 module.extended.id=with recursivecte as\n (select m.moduleid, m.extends_id from modules m\n where orgid = ? and moduleid = ?\n union all \n select m1.moduleid, m1.extends_id from modules m1 \n inner join recursivecte rcte on m1.moduleid = rcte.extends_id\n ) select moduleid from recursivecte
 
+module.child.modules= SELECT moduleid, orgid, name, display_name, table_name, module_type, is_trash_enabled, data_interval, extends_id from modules where orgid = ? AND extends_id = ?
+
 # report date aggr query
 year.expr=format(dateadd(s, {$place_holder1$}, (DATEADD(s, {$place_holder$}/1000, '1970-01-01 00:00:00'))),'yyyy')
 monthandyear.expr=format(dateadd(s, {$place_holder1$}, (DATEADD(s, {$place_holder$}/1000, '1970-01-01 00:00:00'))),'yyyy MM')
