--- a/src/main/resources/conf/db/mysql.properties
+++ b/src/main/resources/conf/db/mysql.properties
@@ -13,6 +13,9 @@ module.submodule.type.id=SELECT CHILD_MODULE_ID FROM SubModulesRel INNER JOIN Mo
 
 module.extended.id=(select q.MODULEID from (SELECT m.MODULEID, @em:=m.EXTENDS_ID AS EXTENDS_ID FROM (SELECT * FROM Modules ORDER BY MODULEID DESC) m JOIN (SELECT @em:=MODULEID FROM Modules WHERE ORGID = ? AND MODULEID = ?) tmp WHERE m.MODULEID=@em) as q)
 
+module.child.modules= SELECT MODULEID, ORGID, NAME, DISPLAY_NAME, TABLE_NAME, MODULE_TYPE, IS_TRASH_ENABLED, DATA_INTERVAL, EXTENDS_ID from Modules where ORGID = ? AND EXTENDS_ID = ?
+
+
 # report date aggr query
 year.expr=DATE_FORMAT(CONVERT_TZ(from_unixtime(floor({$place_holder$}/1000)),@@session.time_zone,'{$place_holder1$}'),'%Y')
 monthandyear.expr=DATE_FORMAT(CONVERT_TZ(from_unixtime(floor({$place_holder$}/1000)),@@session.time_zone,'{$place_holder1$}'),'%Y %m')
